Phase3/mini_l.output
Grammar

    0 $accept: program $end

    1 program: functions

    2 functions: functions function
    3          | %empty

    4 functionH: FUNCTION IDENTIFIER

    5 beginParams: BEGINPARAMS

    6 endParams: ENDPARAMS

    7 function: functionH SEMICOLON beginParams dec endParams BEGINLOCALS dec ENDLOCALS BEGINBODY statementHelper ENDBODY

    8 dec: declaration SEMICOLON dec
    9    | %empty

   10 declaration: decHelper1 COLON decHelper2

   11 decHelper1: IDENTIFIER COMMA decHelper1
   12           | IDENTIFIER

   13 decHelper2: ARRAY LSQUARE NUMBER RSQUARE OF INTEGER
   14           | INTEGER

   15 statement: varStatement
   16          | ifStatement
   17          | whileStatement
   18          | doStatement
   19          | foreachStatement
   20          | readStatement
   21          | writeStatement
   22          | continueStatement
   23          | returnStatement

   24 varStatement: IDENTIFIER ASSIGN expression
   25             | IDENTIFIER LSQUARE expression RSQUARE ASSIGN expression

   26 ifStatement: ifHelper statementHelper ENDIF
   27            | elseifHelper statementHelper ENDIF

   28 statementHelper: statement SEMICOLON statementHelper
   29                | statement SEMICOLON

   30 elseifHelper: ifHelper statementHelper ELSE

   31 ifHelper: IF boolExpr THEN

   32 whileStatement: whileHelper1 statementHelper ENDLOOP

   33 whileHelper1: whileHelper2 boolExpr BEGINLOOP

   34 whileHelper2: WHILE

   35 doStatement: doHelper1 WHILE boolExpr

   36 doHelper1: doHelper2 statementHelper ENDLOOP

   37 doHelper2: DO BEGINLOOP

   38 foreachStatement: foreachHelper1 statementHelper ENDLOOP

   39 foreachHelper1: foreachHelper2 forExpression BEGINLOOP

   40 foreachHelper2: FOREACH

   41 forExpression: IDENTIFIER IN IDENTIFIER

   42 readStatement: READ IDENTIFIER readHelper1
   43              | READ IDENTIFIER LSQUARE expression RSQUARE readHelper1

   44 readHelper1: COMMA IDENTIFIER readHelper1
   45            | COMMA IDENTIFIER LSQUARE expression RSQUARE readHelper1
   46            | %empty

   47 writeHelper1: COMMA varTerm writeHelper1
   48             | %empty

   49 writeStatement: WRITE varTerm writeHelper1

   50 continueStatement: CONTINUE

   51 returnStatement: RETURN expression

   52 boolExpr: relationandexprH
   53         | boolExpr OR relationandexprH

   54 relationandexprH: relationandExpr
   55                 | relationandexprH AND relationandExpr

   56 relationandExpr: relationExprHelper
   57                | NOT relationExprHelper

   58 relationExprHelper: comp
   59                   | TRUE
   60                   | FALSE
   61                   | LPAREN boolExpr RPAREN

   62 comp: expression EQ expression
   63     | expression NEQ expression
   64     | expression LT expression
   65     | expression GT expression
   66     | expression LTE expression
   67     | expression GTE expression

   68 expression: multiplicative_expr multExprH

   69 multExprH: ADD multiplicative_expr multExprH
   70          | SUB multiplicative_expr multExprH
   71          | %empty

   72 multiplicative_expr: term termH

   73 termH: MULT term termH
   74      | DIV term termH
   75      | MOD term termH
   76      | %empty

   77 term: identifierTerm
   78     | varTerm
   79     | SUB varTerm

   80 identifierTerm: IDENTIFIER LPAREN identifierH RPAREN

   81 identifierH: expression COMMA identifierH
   82            | expression

   83 varTerm: var
   84        | NUMBER
   85        | LPAREN expression RPAREN

   86 var: IDENTIFIER
   87    | IDENTIFIER LSQUARE expression RSQUARE


Terminals, with rules where they appear

$end (0) 0
error (256)
FUNCTION (258) 4
BEGINPARAMS (259) 5
ENDPARAMS (260) 6
BEGINLOCALS (261) 7
ENDLOCALS (262) 7
BEGINBODY (263) 7
ENDBODY (264) 7
INTEGER (265) 13 14
ARRAY (266) 13
OF (267) 13
IF (268) 31
THEN (269) 31
ENDIF (270) 26 27
ELSE (271) 30
WHILE (272) 34 35
DO (273) 37
FOREACH (274) 40
IN (275) 41
BEGINLOOP (276) 33 37 39
ENDLOOP (277) 32 36 38
CONTINUE (278) 50
READ (279) 42 43
WRITE (280) 49
TRUE (281) 59
FALSE (282) 60
SEMICOLON (283) 7 8 28 29
COLON (284) 10
COMMA (285) 11 44 45 47 81
LPAREN (286) 61 80 85
RPAREN (287) 61 80 85
LSQUARE (288) 13 25 43 45 87
RSQUARE (289) 13 25 43 45 87
ASSIGN (290) 24 25
RETURN (291) 51
NUMBER (292) 13 84
IDENTIFIER (293) 4 11 12 24 25 41 42 43 44 45 80 86 87
MULT (294) 73
DIV (295) 74
MOD (296) 75
ADD (297) 69
SUB (298) 70 79
LT (299) 64
LTE (300) 66
GT (301) 65
GTE (302) 67
EQ (303) 62
NEQ (304) 63
NOT (305) 57
AND (306) 55
OR (307) 53


Nonterminals, with rules where they appear

$accept (53)
    on left: 0
program (54)
    on left: 1, on right: 0
functions (55)
    on left: 2 3, on right: 1 2
functionH (56)
    on left: 4, on right: 7
beginParams (57)
    on left: 5, on right: 7
endParams (58)
    on left: 6, on right: 7
function (59)
    on left: 7, on right: 2
dec (60)
    on left: 8 9, on right: 7 8
declaration (61)
    on left: 10, on right: 8
decHelper1 (62)
    on left: 11 12, on right: 10 11
decHelper2 (63)
    on left: 13 14, on right: 10
statement (64)
    on left: 15 16 17 18 19 20 21 22 23, on right: 28 29
varStatement (65)
    on left: 24 25, on right: 15
ifStatement (66)
    on left: 26 27, on right: 16
statementHelper (67)
    on left: 28 29, on right: 7 26 27 28 30 32 36 38
elseifHelper (68)
    on left: 30, on right: 27
ifHelper (69)
    on left: 31, on right: 26 30
whileStatement (70)
    on left: 32, on right: 17
whileHelper1 (71)
    on left: 33, on right: 32
whileHelper2 (72)
    on left: 34, on right: 33
doStatement (73)
    on left: 35, on right: 18
doHelper1 (74)
    on left: 36, on right: 35
doHelper2 (75)
    on left: 37, on right: 36
foreachStatement (76)
    on left: 38, on right: 19
foreachHelper1 (77)
    on left: 39, on right: 38
foreachHelper2 (78)
    on left: 40, on right: 39
forExpression (79)
    on left: 41, on right: 39
readStatement (80)
    on left: 42 43, on right: 20
readHelper1 (81)
    on left: 44 45 46, on right: 42 43 44 45
writeHelper1 (82)
    on left: 47 48, on right: 47 49
writeStatement (83)
    on left: 49, on right: 21
continueStatement (84)
    on left: 50, on right: 22
returnStatement (85)
    on left: 51, on right: 23
boolExpr (86)
    on left: 52 53, on right: 31 33 35 53 61
relationandexprH (87)
    on left: 54 55, on right: 52 53 55
relationandExpr (88)
    on left: 56 57, on right: 54 55
relationExprHelper (89)
    on left: 58 59 60 61, on right: 56 57
comp (90)
    on left: 62 63 64 65 66 67, on right: 58
expression (91)
    on left: 68, on right: 24 25 43 45 51 62 63 64 65 66 67 81 82 85
    87
multExprH (92)
    on left: 69 70 71, on right: 68 69 70
multiplicative_expr (93)
    on left: 72, on right: 68 69 70
termH (94)
    on left: 73 74 75 76, on right: 72 73 74 75
term (95)
    on left: 77 78 79, on right: 72 73 74 75
identifierTerm (96)
    on left: 80, on right: 77
identifierH (97)
    on left: 81 82, on right: 80 81
varTerm (98)
    on left: 83 84 85, on right: 47 49 78 79
var (99)
    on left: 86 87, on right: 83


State 0

    0 $accept: . program $end

    $default  reduce using rule 3 (functions)

    program    go to state 1
    functions  go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    1 program: functions .
    2 functions: functions . function

    FUNCTION  shift, and go to state 4

    $default  reduce using rule 1 (program)

    functionH  go to state 5
    function   go to state 6


State 3

    0 $accept: program $end .

    $default  accept


State 4

    4 functionH: FUNCTION . IDENTIFIER

    IDENTIFIER  shift, and go to state 7


State 5

    7 function: functionH . SEMICOLON beginParams dec endParams BEGINLOCALS dec ENDLOCALS BEGINBODY statementHelper ENDBODY

    SEMICOLON  shift, and go to state 8


State 6

    2 functions: functions function .

    $default  reduce using rule 2 (functions)


State 7

    4 functionH: FUNCTION IDENTIFIER .

    $default  reduce using rule 4 (functionH)


State 8

    7 function: functionH SEMICOLON . beginParams dec endParams BEGINLOCALS dec ENDLOCALS BEGINBODY statementHelper ENDBODY

    BEGINPARAMS  shift, and go to state 9

    beginParams  go to state 10


State 9

    5 beginParams: BEGINPARAMS .

    $default  reduce using rule 5 (beginParams)


State 10

    7 function: functionH SEMICOLON beginParams . dec endParams BEGINLOCALS dec ENDLOCALS BEGINBODY statementHelper ENDBODY

    IDENTIFIER  shift, and go to state 11

    $default  reduce using rule 9 (dec)

    dec          go to state 12
    declaration  go to state 13
    decHelper1   go to state 14


State 11

   11 decHelper1: IDENTIFIER . COMMA decHelper1
   12           | IDENTIFIER .

    COMMA  shift, and go to state 15

    $default  reduce using rule 12 (decHelper1)


State 12

    7 function: functionH SEMICOLON beginParams dec . endParams BEGINLOCALS dec ENDLOCALS BEGINBODY statementHelper ENDBODY

    ENDPARAMS  shift, and go to state 16

    endParams  go to state 17


State 13

    8 dec: declaration . SEMICOLON dec

    SEMICOLON  shift, and go to state 18


State 14

   10 declaration: decHelper1 . COLON decHelper2

    COLON  shift, and go to state 19


State 15

   11 decHelper1: IDENTIFIER COMMA . decHelper1

    IDENTIFIER  shift, and go to state 11

    decHelper1  go to state 20


State 16

    6 endParams: ENDPARAMS .

    $default  reduce using rule 6 (endParams)


State 17

    7 function: functionH SEMICOLON beginParams dec endParams . BEGINLOCALS dec ENDLOCALS BEGINBODY statementHelper ENDBODY

    BEGINLOCALS  shift, and go to state 21


State 18

    8 dec: declaration SEMICOLON . dec

    IDENTIFIER  shift, and go to state 11

    $default  reduce using rule 9 (dec)

    dec          go to state 22
    declaration  go to state 13
    decHelper1   go to state 14


State 19

   10 declaration: decHelper1 COLON . decHelper2

    INTEGER  shift, and go to state 23
    ARRAY    shift, and go to state 24

    decHelper2  go to state 25


State 20

   11 decHelper1: IDENTIFIER COMMA decHelper1 .

    $default  reduce using rule 11 (decHelper1)


State 21

    7 function: functionH SEMICOLON beginParams dec endParams BEGINLOCALS . dec ENDLOCALS BEGINBODY statementHelper ENDBODY

    IDENTIFIER  shift, and go to state 11

    $default  reduce using rule 9 (dec)

    dec          go to state 26
    declaration  go to state 13
    decHelper1   go to state 14


State 22

    8 dec: declaration SEMICOLON dec .

    $default  reduce using rule 8 (dec)


State 23

   14 decHelper2: INTEGER .

    $default  reduce using rule 14 (decHelper2)


State 24

   13 decHelper2: ARRAY . LSQUARE NUMBER RSQUARE OF INTEGER

    LSQUARE  shift, and go to state 27


State 25

   10 declaration: decHelper1 COLON decHelper2 .

    $default  reduce using rule 10 (declaration)


State 26

    7 function: functionH SEMICOLON beginParams dec endParams BEGINLOCALS dec . ENDLOCALS BEGINBODY statementHelper ENDBODY

    ENDLOCALS  shift, and go to state 28


State 27

   13 decHelper2: ARRAY LSQUARE . NUMBER RSQUARE OF INTEGER

    NUMBER  shift, and go to state 29


State 28

    7 function: functionH SEMICOLON beginParams dec endParams BEGINLOCALS dec ENDLOCALS . BEGINBODY statementHelper ENDBODY

    BEGINBODY  shift, and go to state 30


State 29

   13 decHelper2: ARRAY LSQUARE NUMBER . RSQUARE OF INTEGER

    RSQUARE  shift, and go to state 31


State 30

    7 function: functionH SEMICOLON beginParams dec endParams BEGINLOCALS dec ENDLOCALS BEGINBODY . statementHelper ENDBODY

    IF          shift, and go to state 32
    WHILE       shift, and go to state 33
    DO          shift, and go to state 34
    FOREACH     shift, and go to state 35
    CONTINUE    shift, and go to state 36
    READ        shift, and go to state 37
    WRITE       shift, and go to state 38
    RETURN      shift, and go to state 39
    IDENTIFIER  shift, and go to state 40

    statement          go to state 41
    varStatement       go to state 42
    ifStatement        go to state 43
    statementHelper    go to state 44
    elseifHelper       go to state 45
    ifHelper           go to state 46
    whileStatement     go to state 47
    whileHelper1       go to state 48
    whileHelper2       go to state 49
    doStatement        go to state 50
    doHelper1          go to state 51
    doHelper2          go to state 52
    foreachStatement   go to state 53
    foreachHelper1     go to state 54
    foreachHelper2     go to state 55
    readStatement      go to state 56
    writeStatement     go to state 57
    continueStatement  go to state 58
    returnStatement    go to state 59


State 31

   13 decHelper2: ARRAY LSQUARE NUMBER RSQUARE . OF INTEGER

    OF  shift, and go to state 60


State 32

   31 ifHelper: IF . boolExpr THEN

    TRUE        shift, and go to state 61
    FALSE       shift, and go to state 62
    LPAREN      shift, and go to state 63
    NUMBER      shift, and go to state 64
    IDENTIFIER  shift, and go to state 65
    SUB         shift, and go to state 66
    NOT         shift, and go to state 67

    boolExpr             go to state 68
    relationandexprH     go to state 69
    relationandExpr      go to state 70
    relationExprHelper   go to state 71
    comp                 go to state 72
    expression           go to state 73
    multiplicative_expr  go to state 74
    term                 go to state 75
    identifierTerm       go to state 76
    varTerm              go to state 77
    var                  go to state 78


State 33

   34 whileHelper2: WHILE .

    $default  reduce using rule 34 (whileHelper2)


State 34

   37 doHelper2: DO . BEGINLOOP

    BEGINLOOP  shift, and go to state 79


State 35

   40 foreachHelper2: FOREACH .

    $default  reduce using rule 40 (foreachHelper2)


State 36

   50 continueStatement: CONTINUE .

    $default  reduce using rule 50 (continueStatement)


State 37

   42 readStatement: READ . IDENTIFIER readHelper1
   43              | READ . IDENTIFIER LSQUARE expression RSQUARE readHelper1

    IDENTIFIER  shift, and go to state 80


State 38

   49 writeStatement: WRITE . varTerm writeHelper1

    LPAREN      shift, and go to state 81
    NUMBER      shift, and go to state 64
    IDENTIFIER  shift, and go to state 82

    varTerm  go to state 83
    var      go to state 78


State 39

   51 returnStatement: RETURN . expression

    LPAREN      shift, and go to state 81
    NUMBER      shift, and go to state 64
    IDENTIFIER  shift, and go to state 65
    SUB         shift, and go to state 66

    expression           go to state 84
    multiplicative_expr  go to state 74
    term                 go to state 75
    identifierTerm       go to state 76
    varTerm              go to state 77
    var                  go to state 78


State 40

   24 varStatement: IDENTIFIER . ASSIGN expression
   25             | IDENTIFIER . LSQUARE expression RSQUARE ASSIGN expression

    LSQUARE  shift, and go to state 85
    ASSIGN   shift, and go to state 86


State 41

   28 statementHelper: statement . SEMICOLON statementHelper
   29                | statement . SEMICOLON

    SEMICOLON  shift, and go to state 87


State 42

   15 statement: varStatement .

    $default  reduce using rule 15 (statement)


State 43

   16 statement: ifStatement .

    $default  reduce using rule 16 (statement)


State 44

    7 function: functionH SEMICOLON beginParams dec endParams BEGINLOCALS dec ENDLOCALS BEGINBODY statementHelper . ENDBODY

    ENDBODY  shift, and go to state 88


State 45

   27 ifStatement: elseifHelper . statementHelper ENDIF

    IF          shift, and go to state 32
    WHILE       shift, and go to state 33
    DO          shift, and go to state 34
    FOREACH     shift, and go to state 35
    CONTINUE    shift, and go to state 36
    READ        shift, and go to state 37
    WRITE       shift, and go to state 38
    RETURN      shift, and go to state 39
    IDENTIFIER  shift, and go to state 40

    statement          go to state 41
    varStatement       go to state 42
    ifStatement        go to state 43
    statementHelper    go to state 89
    elseifHelper       go to state 45
    ifHelper           go to state 46
    whileStatement     go to state 47
    whileHelper1       go to state 48
    whileHelper2       go to state 49
    doStatement        go to state 50
    doHelper1          go to state 51
    doHelper2          go to state 52
    foreachStatement   go to state 53
    foreachHelper1     go to state 54
    foreachHelper2     go to state 55
    readStatement      go to state 56
    writeStatement     go to state 57
    continueStatement  go to state 58
    returnStatement    go to state 59


State 46

   26 ifStatement: ifHelper . statementHelper ENDIF
   30 elseifHelper: ifHelper . statementHelper ELSE

    IF          shift, and go to state 32
    WHILE       shift, and go to state 33
    DO          shift, and go to state 34
    FOREACH     shift, and go to state 35
    CONTINUE    shift, and go to state 36
    READ        shift, and go to state 37
    WRITE       shift, and go to state 38
    RETURN      shift, and go to state 39
    IDENTIFIER  shift, and go to state 40

    statement          go to state 41
    varStatement       go to state 42
    ifStatement        go to state 43
    statementHelper    go to state 90
    elseifHelper       go to state 45
    ifHelper           go to state 46
    whileStatement     go to state 47
    whileHelper1       go to state 48
    whileHelper2       go to state 49
    doStatement        go to state 50
    doHelper1          go to state 51
    doHelper2          go to state 52
    foreachStatement   go to state 53
    foreachHelper1     go to state 54
    foreachHelper2     go to state 55
    readStatement      go to state 56
    writeStatement     go to state 57
    continueStatement  go to state 58
    returnStatement    go to state 59


State 47

   17 statement: whileStatement .

    $default  reduce using rule 17 (statement)


State 48

   32 whileStatement: whileHelper1 . statementHelper ENDLOOP

    IF          shift, and go to state 32
    WHILE       shift, and go to state 33
    DO          shift, and go to state 34
    FOREACH     shift, and go to state 35
    CONTINUE    shift, and go to state 36
    READ        shift, and go to state 37
    WRITE       shift, and go to state 38
    RETURN      shift, and go to state 39
    IDENTIFIER  shift, and go to state 40

    statement          go to state 41
    varStatement       go to state 42
    ifStatement        go to state 43
    statementHelper    go to state 91
    elseifHelper       go to state 45
    ifHelper           go to state 46
    whileStatement     go to state 47
    whileHelper1       go to state 48
    whileHelper2       go to state 49
    doStatement        go to state 50
    doHelper1          go to state 51
    doHelper2          go to state 52
    foreachStatement   go to state 53
    foreachHelper1     go to state 54
    foreachHelper2     go to state 55
    readStatement      go to state 56
    writeStatement     go to state 57
    continueStatement  go to state 58
    returnStatement    go to state 59


State 49

   33 whileHelper1: whileHelper2 . boolExpr BEGINLOOP

    TRUE        shift, and go to state 61
    FALSE       shift, and go to state 62
    LPAREN      shift, and go to state 63
    NUMBER      shift, and go to state 64
    IDENTIFIER  shift, and go to state 65
    SUB         shift, and go to state 66
    NOT         shift, and go to state 67

    boolExpr             go to state 92
    relationandexprH     go to state 69
    relationandExpr      go to state 70
    relationExprHelper   go to state 71
    comp                 go to state 72
    expression           go to state 73
    multiplicative_expr  go to state 74
    term                 go to state 75
    identifierTerm       go to state 76
    varTerm              go to state 77
    var                  go to state 78


State 50

   18 statement: doStatement .

    $default  reduce using rule 18 (statement)


State 51

   35 doStatement: doHelper1 . WHILE boolExpr

    WHILE  shift, and go to state 93


State 52

   36 doHelper1: doHelper2 . statementHelper ENDLOOP

    IF          shift, and go to state 32
    WHILE       shift, and go to state 33
    DO          shift, and go to state 34
    FOREACH     shift, and go to state 35
    CONTINUE    shift, and go to state 36
    READ        shift, and go to state 37
    WRITE       shift, and go to state 38
    RETURN      shift, and go to state 39
    IDENTIFIER  shift, and go to state 40

    statement          go to state 41
    varStatement       go to state 42
    ifStatement        go to state 43
    statementHelper    go to state 94
    elseifHelper       go to state 45
    ifHelper           go to state 46
    whileStatement     go to state 47
    whileHelper1       go to state 48
    whileHelper2       go to state 49
    doStatement        go to state 50
    doHelper1          go to state 51
    doHelper2          go to state 52
    foreachStatement   go to state 53
    foreachHelper1     go to state 54
    foreachHelper2     go to state 55
    readStatement      go to state 56
    writeStatement     go to state 57
    continueStatement  go to state 58
    returnStatement    go to state 59


State 53

   19 statement: foreachStatement .

    $default  reduce using rule 19 (statement)


State 54

   38 foreachStatement: foreachHelper1 . statementHelper ENDLOOP

    IF          shift, and go to state 32
    WHILE       shift, and go to state 33
    DO          shift, and go to state 34
    FOREACH     shift, and go to state 35
    CONTINUE    shift, and go to state 36
    READ        shift, and go to state 37
    WRITE       shift, and go to state 38
    RETURN      shift, and go to state 39
    IDENTIFIER  shift, and go to state 40

    statement          go to state 41
    varStatement       go to state 42
    ifStatement        go to state 43
    statementHelper    go to state 95
    elseifHelper       go to state 45
    ifHelper           go to state 46
    whileStatement     go to state 47
    whileHelper1       go to state 48
    whileHelper2       go to state 49
    doStatement        go to state 50
    doHelper1          go to state 51
    doHelper2          go to state 52
    foreachStatement   go to state 53
    foreachHelper1     go to state 54
    foreachHelper2     go to state 55
    readStatement      go to state 56
    writeStatement     go to state 57
    continueStatement  go to state 58
    returnStatement    go to state 59


State 55

   39 foreachHelper1: foreachHelper2 . forExpression BEGINLOOP

    IDENTIFIER  shift, and go to state 96

    forExpression  go to state 97


State 56

   20 statement: readStatement .

    $default  reduce using rule 20 (statement)


State 57

   21 statement: writeStatement .

    $default  reduce using rule 21 (statement)


State 58

   22 statement: continueStatement .

    $default  reduce using rule 22 (statement)


State 59

   23 statement: returnStatement .

    $default  reduce using rule 23 (statement)


State 60

   13 decHelper2: ARRAY LSQUARE NUMBER RSQUARE OF . INTEGER

    INTEGER  shift, and go to state 98


State 61

   59 relationExprHelper: TRUE .

    $default  reduce using rule 59 (relationExprHelper)


State 62

   60 relationExprHelper: FALSE .

    $default  reduce using rule 60 (relationExprHelper)


State 63

   61 relationExprHelper: LPAREN . boolExpr RPAREN
   85 varTerm: LPAREN . expression RPAREN

    TRUE        shift, and go to state 61
    FALSE       shift, and go to state 62
    LPAREN      shift, and go to state 63
    NUMBER      shift, and go to state 64
    IDENTIFIER  shift, and go to state 65
    SUB         shift, and go to state 66
    NOT         shift, and go to state 67

    boolExpr             go to state 99
    relationandexprH     go to state 69
    relationandExpr      go to state 70
    relationExprHelper   go to state 71
    comp                 go to state 72
    expression           go to state 100
    multiplicative_expr  go to state 74
    term                 go to state 75
    identifierTerm       go to state 76
    varTerm              go to state 77
    var                  go to state 78


State 64

   84 varTerm: NUMBER .

    $default  reduce using rule 84 (varTerm)


State 65

   80 identifierTerm: IDENTIFIER . LPAREN identifierH RPAREN
   86 var: IDENTIFIER .
   87    | IDENTIFIER . LSQUARE expression RSQUARE

    LPAREN   shift, and go to state 101
    LSQUARE  shift, and go to state 102

    $default  reduce using rule 86 (var)


State 66

   79 term: SUB . varTerm

    LPAREN      shift, and go to state 81
    NUMBER      shift, and go to state 64
    IDENTIFIER  shift, and go to state 82

    varTerm  go to state 103
    var      go to state 78


State 67

   57 relationandExpr: NOT . relationExprHelper

    TRUE        shift, and go to state 61
    FALSE       shift, and go to state 62
    LPAREN      shift, and go to state 63
    NUMBER      shift, and go to state 64
    IDENTIFIER  shift, and go to state 65
    SUB         shift, and go to state 66

    relationExprHelper   go to state 104
    comp                 go to state 72
    expression           go to state 73
    multiplicative_expr  go to state 74
    term                 go to state 75
    identifierTerm       go to state 76
    varTerm              go to state 77
    var                  go to state 78


State 68

   31 ifHelper: IF boolExpr . THEN
   53 boolExpr: boolExpr . OR relationandexprH

    THEN  shift, and go to state 105
    OR    shift, and go to state 106


State 69

   52 boolExpr: relationandexprH .
   55 relationandexprH: relationandexprH . AND relationandExpr

    AND  shift, and go to state 107

    $default  reduce using rule 52 (boolExpr)


State 70

   54 relationandexprH: relationandExpr .

    $default  reduce using rule 54 (relationandexprH)


State 71

   56 relationandExpr: relationExprHelper .

    $default  reduce using rule 56 (relationandExpr)


State 72

   58 relationExprHelper: comp .

    $default  reduce using rule 58 (relationExprHelper)


State 73

   62 comp: expression . EQ expression
   63     | expression . NEQ expression
   64     | expression . LT expression
   65     | expression . GT expression
   66     | expression . LTE expression
   67     | expression . GTE expression

    LT   shift, and go to state 108
    LTE  shift, and go to state 109
    GT   shift, and go to state 110
    GTE  shift, and go to state 111
    EQ   shift, and go to state 112
    NEQ  shift, and go to state 113


State 74

   68 expression: multiplicative_expr . multExprH

    ADD  shift, and go to state 114
    SUB  shift, and go to state 115

    $default  reduce using rule 71 (multExprH)

    multExprH  go to state 116


State 75

   72 multiplicative_expr: term . termH

    MULT  shift, and go to state 117
    DIV   shift, and go to state 118
    MOD   shift, and go to state 119

    $default  reduce using rule 76 (termH)

    termH  go to state 120


State 76

   77 term: identifierTerm .

    $default  reduce using rule 77 (term)


State 77

   78 term: varTerm .

    $default  reduce using rule 78 (term)


State 78

   83 varTerm: var .

    $default  reduce using rule 83 (varTerm)


State 79

   37 doHelper2: DO BEGINLOOP .

    $default  reduce using rule 37 (doHelper2)


State 80

   42 readStatement: READ IDENTIFIER . readHelper1
   43              | READ IDENTIFIER . LSQUARE expression RSQUARE readHelper1

    COMMA    shift, and go to state 121
    LSQUARE  shift, and go to state 122

    $default  reduce using rule 46 (readHelper1)

    readHelper1  go to state 123


State 81

   85 varTerm: LPAREN . expression RPAREN

    LPAREN      shift, and go to state 81
    NUMBER      shift, and go to state 64
    IDENTIFIER  shift, and go to state 65
    SUB         shift, and go to state 66

    expression           go to state 124
    multiplicative_expr  go to state 74
    term                 go to state 75
    identifierTerm       go to state 76
    varTerm              go to state 77
    var                  go to state 78


State 82

   86 var: IDENTIFIER .
   87    | IDENTIFIER . LSQUARE expression RSQUARE

    LSQUARE  shift, and go to state 102

    $default  reduce using rule 86 (var)


State 83

   49 writeStatement: WRITE varTerm . writeHelper1

    COMMA  shift, and go to state 125

    $default  reduce using rule 48 (writeHelper1)

    writeHelper1  go to state 126


State 84

   51 returnStatement: RETURN expression .

    $default  reduce using rule 51 (returnStatement)


State 85

   25 varStatement: IDENTIFIER LSQUARE . expression RSQUARE ASSIGN expression

    LPAREN      shift, and go to state 81
    NUMBER      shift, and go to state 64
    IDENTIFIER  shift, and go to state 65
    SUB         shift, and go to state 66

    expression           go to state 127
    multiplicative_expr  go to state 74
    term                 go to state 75
    identifierTerm       go to state 76
    varTerm              go to state 77
    var                  go to state 78


State 86

   24 varStatement: IDENTIFIER ASSIGN . expression

    LPAREN      shift, and go to state 81
    NUMBER      shift, and go to state 64
    IDENTIFIER  shift, and go to state 65
    SUB         shift, and go to state 66

    expression           go to state 128
    multiplicative_expr  go to state 74
    term                 go to state 75
    identifierTerm       go to state 76
    varTerm              go to state 77
    var                  go to state 78


State 87

   28 statementHelper: statement SEMICOLON . statementHelper
   29                | statement SEMICOLON .

    IF          shift, and go to state 32
    WHILE       shift, and go to state 33
    DO          shift, and go to state 34
    FOREACH     shift, and go to state 35
    CONTINUE    shift, and go to state 36
    READ        shift, and go to state 37
    WRITE       shift, and go to state 38
    RETURN      shift, and go to state 39
    IDENTIFIER  shift, and go to state 40

    $default  reduce using rule 29 (statementHelper)

    statement          go to state 41
    varStatement       go to state 42
    ifStatement        go to state 43
    statementHelper    go to state 129
    elseifHelper       go to state 45
    ifHelper           go to state 46
    whileStatement     go to state 47
    whileHelper1       go to state 48
    whileHelper2       go to state 49
    doStatement        go to state 50
    doHelper1          go to state 51
    doHelper2          go to state 52
    foreachStatement   go to state 53
    foreachHelper1     go to state 54
    foreachHelper2     go to state 55
    readStatement      go to state 56
    writeStatement     go to state 57
    continueStatement  go to state 58
    returnStatement    go to state 59


State 88

    7 function: functionH SEMICOLON beginParams dec endParams BEGINLOCALS dec ENDLOCALS BEGINBODY statementHelper ENDBODY .

    $default  reduce using rule 7 (function)


State 89

   27 ifStatement: elseifHelper statementHelper . ENDIF

    ENDIF  shift, and go to state 130


State 90

   26 ifStatement: ifHelper statementHelper . ENDIF
   30 elseifHelper: ifHelper statementHelper . ELSE

    ENDIF  shift, and go to state 131
    ELSE   shift, and go to state 132


State 91

   32 whileStatement: whileHelper1 statementHelper . ENDLOOP

    ENDLOOP  shift, and go to state 133


State 92

   33 whileHelper1: whileHelper2 boolExpr . BEGINLOOP
   53 boolExpr: boolExpr . OR relationandexprH

    BEGINLOOP  shift, and go to state 134
    OR         shift, and go to state 106


State 93

   35 doStatement: doHelper1 WHILE . boolExpr

    TRUE        shift, and go to state 61
    FALSE       shift, and go to state 62
    LPAREN      shift, and go to state 63
    NUMBER      shift, and go to state 64
    IDENTIFIER  shift, and go to state 65
    SUB         shift, and go to state 66
    NOT         shift, and go to state 67

    boolExpr             go to state 135
    relationandexprH     go to state 69
    relationandExpr      go to state 70
    relationExprHelper   go to state 71
    comp                 go to state 72
    expression           go to state 73
    multiplicative_expr  go to state 74
    term                 go to state 75
    identifierTerm       go to state 76
    varTerm              go to state 77
    var                  go to state 78


State 94

   36 doHelper1: doHelper2 statementHelper . ENDLOOP

    ENDLOOP  shift, and go to state 136


State 95

   38 foreachStatement: foreachHelper1 statementHelper . ENDLOOP

    ENDLOOP  shift, and go to state 137


State 96

   41 forExpression: IDENTIFIER . IN IDENTIFIER

    IN  shift, and go to state 138


State 97

   39 foreachHelper1: foreachHelper2 forExpression . BEGINLOOP

    BEGINLOOP  shift, and go to state 139


State 98

   13 decHelper2: ARRAY LSQUARE NUMBER RSQUARE OF INTEGER .

    $default  reduce using rule 13 (decHelper2)


State 99

   53 boolExpr: boolExpr . OR relationandexprH
   61 relationExprHelper: LPAREN boolExpr . RPAREN

    RPAREN  shift, and go to state 140
    OR      shift, and go to state 106


State 100

   62 comp: expression . EQ expression
   63     | expression . NEQ expression
   64     | expression . LT expression
   65     | expression . GT expression
   66     | expression . LTE expression
   67     | expression . GTE expression
   85 varTerm: LPAREN expression . RPAREN

    RPAREN  shift, and go to state 141
    LT      shift, and go to state 108
    LTE     shift, and go to state 109
    GT      shift, and go to state 110
    GTE     shift, and go to state 111
    EQ      shift, and go to state 112
    NEQ     shift, and go to state 113


State 101

   80 identifierTerm: IDENTIFIER LPAREN . identifierH RPAREN

    LPAREN      shift, and go to state 81
    NUMBER      shift, and go to state 64
    IDENTIFIER  shift, and go to state 65
    SUB         shift, and go to state 66

    expression           go to state 142
    multiplicative_expr  go to state 74
    term                 go to state 75
    identifierTerm       go to state 76
    identifierH          go to state 143
    varTerm              go to state 77
    var                  go to state 78


State 102

   87 var: IDENTIFIER LSQUARE . expression RSQUARE

    LPAREN      shift, and go to state 81
    NUMBER      shift, and go to state 64
    IDENTIFIER  shift, and go to state 65
    SUB         shift, and go to state 66

    expression           go to state 144
    multiplicative_expr  go to state 74
    term                 go to state 75
    identifierTerm       go to state 76
    varTerm              go to state 77
    var                  go to state 78


State 103

   79 term: SUB varTerm .

    $default  reduce using rule 79 (term)


State 104

   57 relationandExpr: NOT relationExprHelper .

    $default  reduce using rule 57 (relationandExpr)


State 105

   31 ifHelper: IF boolExpr THEN .

    $default  reduce using rule 31 (ifHelper)


State 106

   53 boolExpr: boolExpr OR . relationandexprH

    TRUE        shift, and go to state 61
    FALSE       shift, and go to state 62
    LPAREN      shift, and go to state 63
    NUMBER      shift, and go to state 64
    IDENTIFIER  shift, and go to state 65
    SUB         shift, and go to state 66
    NOT         shift, and go to state 67
